<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:clipToPadding="false">

    <TextView
        android:id="@+id/textViewTitleDialogAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="15dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:text="@string/about_app"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_round"
        android:src="@drawable/ic_ls_logo_svg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitleDialogAbout" />

    <TextView
        android:id="@+id/textViewDialogAboutLightSearch"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="2dp"
        android:text="@string/about_LightSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <TextView
        android:id="@+id/textViewDialogAboutVersion"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/about_version"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDialogAboutLightSearch" />

    <TextView
        android:id="@+id/textViewDialogAboutCodeVersion"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/about_code_version"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDialogAboutVersion" />

    <TextView
        android:id="@+id/textViewDialogAboutLicense"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:text="@string/about_license"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDialogAboutCodeVersion" />

    <Button
        android:id="@+id/buttonDialogAbout"
        android:layout_width="60dp"
        android:layout_height="31dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/buttonshape"
        android:text="@string/dialog_OK"
        android:textColor="@color/buttonTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDialogAboutLicense" />
</android.support.constraint.ConstraintLayout>