<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/dialog_rec"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:clipToPadding="false"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitleDialogAuth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="15dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:text="@string/dialog_reconnect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/twAuthFailed"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:textColor="@color/colorDelete"
        android:layout_gravity="center"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleDialogAuth" />

    <TextView
        android:id="@+id/twNeedAuth"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="@string/need_auth"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twAuthFailed" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittextshape"
        android:ems="10"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="14sp"
        android:hint="@string/username_label"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twNeedAuth"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittextshape"
        android:ems="10"
        android:imeOptions="actionSearch"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="14sp"
        android:hint="@string/password_label"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsername"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etUserIdent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittextshape"
        android:ems="10"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="14sp"
        android:hint="@string/userIdent_label"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        android:importantForAutofill="no" />

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/buttonDialogReconnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/buttonshape_small"
        android:text="@string/buttonConnect_label"
        android:layout_gravity="center"
        android:textColor="@color/buttonTextColor"
        android:textSize="14sp"
        app:spinning_bar_color="@android:color/white"
        app:spinning_bar_padding="6dp"
        app:finalCornerAngle="40dp"
        app:initialCornerAngle="40dp"
        app:spinning_bar_width="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUserIdent" />

</LinearLayout>