<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <EditText
        android:id="@+id/editTextSearch"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:autofillHints="Поиск"
        android:background="@drawable/edittextshape"
        android:ems="10"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:labelFor="@+id/editTextSearch"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="20sp"
        android:hint="@string/searchHint"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editTextSearch"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <RadioButton
            android:id="@+id/radioButtonSklad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/skladRB"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioButtonTK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TKRB"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioButtonAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AllRB"
            android:textSize="20sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewSklad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sklad_label"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupSearch" />

    <ProgressBar
        android:id="@+id/pBarSpinnerSklad"
        style="?android:attr/progressBarStyleSmall"
        android:indeterminateDrawable="@drawable/progress_bar"
        android:indeterminate="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/spinnerSklad"
        app:layout_constraintStart_toEndOf="@+id/textViewSklad"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupSearch"/>

    <ru.viise.lightsearch.fragment.SpinnerWithCallback
        android:id="@+id/spinnerSklad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewSklad" />

    <ProgressBar
        android:id="@+id/pBarSpinnerTK"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="10dp"
        android:visibility="gone"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progress_bar"
        app:layout_constraintBottom_toTopOf="@+id/spinnerTK"
        app:layout_constraintStart_toEndOf="@+id/textViewTK"
        app:layout_constraintTop_toBottomOf="@+id/spinnerSklad" />

    <TextView
        android:id="@+id/textViewTK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/TK_label"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerSklad" />

    <ru.viise.lightsearch.fragment.SpinnerWithCallback
        android:id="@+id/spinnerTK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewTK" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButtonBarcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_gravity="end"
        app:srcCompat="@drawable/ic_barcode"
        android:scaleType="center"
        app:backgroundTint="@color/colorPrimary"
        android:layout_marginBottom="75dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>