<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:activity="ru.viise.lightsearch.fragment.AuthorizationFragment"
    android:background="@color/background">

    <include
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/toolbar_authorization" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username_label"
            android:layout_marginTop="20dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittextshape"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:inputType="textPersonName"
            android:textSize="20sp" />
        <!--android:importantForAutofill="no"-->

        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_label"
            android:textSize="20sp"/>
        <!--android:importantForAutofill="no"-->

        <EditText
            android:id="@+id/editTextPassword"
            android:background="@drawable/edittextshape"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:textSize="20sp"/>
        <!--android:importantForAutofill="no"-->

        <TextView
            android:id="@+id/textViewUserIdent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/userIdent_label"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextUserIdent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittextshape"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:inputType="number"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonConnect"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="@color/buttonShadowColor"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="2"
            android:text="@string/buttonConnect_label"
            android:textColor="@color/buttonTextColor" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>